--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -7,11 +7,11 @@
     <%# f.input :user_id , wrapper_html: { class: 'col-3'} %>
     <%# f.input :invoice_id , wrapper_html: { class: 'col-3'} %>
     <%# f.association :payplan, label_method: :payplan_period, value_method: :id, prompt: "Choose a Payplan" , wrapper_html: { class: 'col-3'} %>
-    <%= f.input :payplan_id, wrapper_html: { class: 'col-3'} do %>
+    <%= f.input :payplan_id, label: 'Тариф', wrapper_html: { class: 'col-3'} do %>
     <%= f.select :payplan_id, Payplan.all.map { |r| [ r.period, r.id ] }, {include_blank: false}, { class: "form-control select optional" }%>
     <% end %>
     <%= f.input :status, collection: ['Не оплачен', 'Оплачен'], wrapper_html: { class: 'col-3'}  %>
-    <%= f.input :paymenttype, collection: [['invoice', 'Счёт для юр лиц'],['creditcard', 'Кредитные карты'], ['paypal', 'Paypal']], wrapper_html: { class: 'col-3'}  %>
+    <%= f.input :paymenttype, collection: [['Счёт для юр лиц', 'invoice'],['Кредитные карты', 'creditcard'], ['Paypal', 'paypal']], label: 'Способ оплаты', wrapper_html: { class: 'col-3'}  %>
     <%= f.input :paymentdate, as: :string, wrapper_html: { class: 'col-3'} %>
     <%# f.input :paymentid, wrapper_html: { class: 'col-3'}  %>
   </div>
