--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="yandex-verification" content="c284690800bdd189"/>
     <meta name="google-site-verification" content="A2boZBNCfcqtaHUFrJL26DHYNaKN9efyXijRxZmNVCk"/>
+    <meta name="yandex-verification" content="c284690800bdd189" />
     <title>K-comment - сервис избранных товаров insales</title>
     <meta name="description" content="Избранные товары insales. От 500 руб/месяц. K-comment - это сервис для Вашего магазина на insales, который позволит Вашим постоянным клиентам откладывать товары для последующего изучения и покупки."/>
     <%= csrf_meta_tags %>
