--- a/app/views/user_mailer/test_welcome_email.html.erb
+++ b/app/views/user_mailer/test_welcome_email.html.erb
@@ -4,10 +4,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h2>Welcome to k-comment.ru</h2>
-    <p>
-      Новая регистрация в приложении
-    </p>
+    <p>Новая регистрация в приложении.</p>
+    <p>Почта пользователя: <%= @user_email %> </p>
     <p>Thanks for joining and have a great day!</p>
     <p>___</p>
     <p>С уважением, служба поддержки </p>
