--- a/app/views/user_mailer/test_welcome_email.text.erb
+++ b/app/views/user_mailer/test_welcome_email.text.erb
@@ -1,12 +1,8 @@
-Welcome to k-comment.ru, <%= @user.name %>
+Welcome to k-comment.ru!
 ===============================================
 
-You have successfully signed up to example.com,
-your subdomain is: <%= @user.subdomain %>.
-
-To login to the site, just follow this link: <%= @url %>.
-
-Thanks for joining and have a great day!
+  Новая регистрация в приложении.
+  Почта пользователя: <%= @user_email %>
 
 ___
 С уважением,
