--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
     <!-- About Section Content -->
     <div class="row">
       <div class="col-lg-4 ml-auto">
-        <p class="lead">"K-comment - избранные товары" это приложение для CMS InSales. Оно позволяет сделать в магазине раздел с избранными товарами Ваших зарегистрированных клиентов.</p>
+        <p class="lead">"K-comment - избранные товары" это приложение для CMS InSales. Оно позволяет сделать в магазине раздел с избранными товарами для Ваших зарегистрированных клиентов.</p>
       </div>
       <div class="col-lg-4 mr-auto">
         <p class="lead">Это позволит Вашим клиентам получить более качественные сервис от Вашего магазина.</p>
@@ -24,7 +24,7 @@
   <div class="container">
 
     <div class="card-deck row">
-      <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="card">
           <div class="view overlay">
             <%= image_tag "/benefit1.jpg", data: { src: "/benefit1.jpg"}, class: "card-img-top" %>
@@ -36,7 +36,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="card">
           <div class="view overlay">
             <%= image_tag "/benefit2.jpg", data: { src: "/benefit2.jpg"}, class: "card-img-top" %>
@@ -48,7 +48,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="card">
           <div class="view overlay">
             <%= image_tag "/benefit3.jpg", data: { src: "/benefit3.jpg"}, class: "card-img-top" %>
@@ -57,6 +57,18 @@
           <div class="card-body">
             <h4 class="card-title">Отчеты об отобранных товарах</h4>
             <p class="card-text">Вы можете просматривать список отобранных товаров по клиентам отдельно или экспортировать весь список в CSV для дальнейшего анализа.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="card">
+          <div class="view overlay">
+            <%= image_tag "/benefit4.jpg", data: { src: "/benefit4.jpg"}, class: "card-img-top" %>
+            <div class="mask rgba-white-slight"></div>
+          </div>
+          <div class="card-body">
+            <h4 class="card-title">Состав избранного на email</h4>
+            <p class="card-text">Ваши клиенты могут отправлять список товаров на свой контактный email со страницы "Избранные товары".</p>
           </div>
         </div>
       </div>
