--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,7 @@
 
     <div class="card-deck row">
       <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="card">
+        <div class="card m-0">
           <div class="view overlay">
             <%= image_tag "/benefit1.jpg", data: { src: "/benefit1.jpg"}, class: "card-img-top" %>
             <div class="mask rgba-white-slight"></div>
@@ -37,19 +37,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="card">
-          <div class="view overlay">
-            <%= image_tag "/benefit2.jpg", data: { src: "/benefit2.jpg"}, class: "card-img-top" %>
-            <div class="mask rgba-white-slight"></div>
-          </div>
-          <div class="card-body">
-            <h4 class="card-title">Полностью изменяемый вид</h4>
-            <p class="card-text">Обладая базовыми знаниями в CSS вы можете полностью изменить дизайн кнопок и страницы "Избранные товары" под Ваш стиль магазина.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="card">
+        <div class="card m-0">
           <div class="view overlay">
             <%= image_tag "/benefit3.jpg", data: { src: "/benefit3.jpg"}, class: "card-img-top" %>
             <div class="mask rgba-white-slight"></div>
@@ -61,7 +49,19 @@
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="card">
+        <div class="card m-0">
+          <div class="view overlay">
+            <%= image_tag "/benefit2.jpg", data: { src: "/benefit2.jpg"}, class: "card-img-top" %>
+            <div class="mask rgba-white-slight"></div>
+          </div>
+          <div class="card-body">
+            <h4 class="card-title">Полностью изменяемый вид</h4>
+            <p class="card-text">Обладая базовыми знаниями в CSS вы можете полностью изменить дизайн кнопок и страницы "Избранные товары" под Ваш стиль магазина.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="card m-0">
           <div class="view overlay">
             <%= image_tag "/benefit4.jpg", data: { src: "/benefit4.jpg"}, class: "card-img-top" %>
             <div class="mask rgba-white-slight"></div>
