--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,7 @@
 
     <div class="card-deck row">
       <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="card m-l-0 m-r-0">
+        <div class="card ml-0 mr-0">
           <div class="view overlay">
             <%= image_tag "/benefit1.jpg", data: { src: "/benefit1.jpg"}, class: "card-img-top" %>
             <div class="mask rgba-white-slight"></div>
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="card m-l-0 m-r-0">
+        <div class="card ml-0 mr-0">
           <div class="view overlay">
             <%= image_tag "/benefit3.jpg", data: { src: "/benefit3.jpg"}, class: "card-img-top" %>
             <div class="mask rgba-white-slight"></div>
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="card m-l-0 m-r-0">
+        <div class="card ml-0 mr-0">
           <div class="view overlay">
             <%= image_tag "/benefit2.jpg", data: { src: "/benefit2.jpg"}, class: "card-img-top" %>
             <div class="mask rgba-white-slight"></div>
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="card m-l-0 m-r-0">
+        <div class="card ml-0 mr-0">
           <div class="view overlay">
             <%= image_tag "/benefit4.jpg", data: { src: "/benefit4.jpg"}, class: "card-img-top" %>
             <div class="mask rgba-white-slight"></div>
