--- a/app/views/home/index_setup.html.erb
+++ b/app/views/home/index_setup.html.erb
@@ -3,10 +3,10 @@
   <div class="container">
 
     <!-- About Section Heading -->
-    <h1 class="display-4 text-center text-uppercase pb-4 h2">Настройка</h1>
+    <h1 class="display-4 text-center text-uppercase pb-4">Настройка</h1>
 
     <div class="container">
-      <h1 class="h2 text-center">Инструкция по установке и настройке приложения</h1>
+      <h1 class="h2 text-center">Установке и настройка</h1>
       <ul class="nav nav-pills mb-3 mt-5" id="pills-tab" role="tablist">
         <li class="nav-item">
           <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Установка из магазина приложений InSales</a>
