--- a/app/views/layouts/_zammad.html
+++ b/app/views/layouts/_zammad.html
@@ -1,4 +1,4 @@
-<script src="https://www.helpdesk.irband.ru/assets/chat/chat.min.js"></script>
+<script src="https://helpdesk.irband.ru/assets/chat/chat.min.js"></script>
 <script>
 $(function() {
   new ZammadChat({
