--- a/app/views/layouts/_zammad.html
+++ b/app/views/layouts/_zammad.html
@@ -5,7 +5,8 @@ $(function() {
     title: '<strong>Служба поддержки</strong>',
     background: '#d1d1d1',
     fontSize: '12px',
-    chatId: 1
+    chatId: 2,
+    debug: true
   });
 });
 </script>
