--- a/app/views/layouts/_zammad.html
+++ b/app/views/layouts/_zammad.html
@@ -5,8 +5,8 @@ $(function() {
     title: '<strong>Служба поддержки</strong>',
     background: '#d1d1d1',
     fontSize: '12px',
-    chatId: 2,
-    debug: true
+    //debug: true,
+    chatId: 2
   });
 });
 </script>
