Add new admin panel, cancan

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -108,22 +108,24 @@
 
   <div class="container">
     <div class="card-deck mb-3 text-center p-3">
-      <div class="card mb-4 box-shadow">
-        <div class="card-header">
-          <h4 class="my-0 font-weight-normal">Бесплатно</h4>
+      <% if !current_user || current_user.status_test_period %>
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Бесплатно</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">7 дней<small class="text-muted"></small>
+            </h1>
+            <ul class="text-left mt-3 mb-4">
+              <li>Поддержка</li>
+              <li>
+                <a href="/index-setup">Самостоятельная настройка</a>
+              </li>
+            </ul>
+            <%= link_to "Установить", new_registration_path('user'), class: 'btn btn-lg btn-block btn-primary' %>
+          </div>
         </div>
-        <div class="card-body">
-          <h1 class="card-title pricing-card-title">7 дней<small class="text-muted"></small>
-          </h1>
-          <ul class="text-left mt-3 mb-4">
-            <li>Поддержка</li>
-            <li>
-              <a href="/index-setup">Самостоятельная настройка</a>
-            </li>
-          </ul>
-          <%= link_to "Установить", new_registration_path('user'), class: 'btn btn-lg btn-block btn-primary' %>
-        </div>
-      </div>
+      <% end %>
       <div class="card mb-4 box-shadow">
         <div class="card-header">
           <h4 class="my-0 font-weight-normal">Ежемесячный</h4>
