--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -5,7 +5,15 @@
       <p>Выберите тип плательщика:</p>
       <%= f.input :payertype, as: :radio_buttons, collection: [['fiz', 'Физ лицо'], ['ur', 'Юр лицо']], label_method: :second, value_method: :first, label: false, :checked => 'fiz' %>
       <p>Выберите период продления:</p>
-      <%= f.association :payplan, as: :radio_buttons, label_method: lambda { |plan| "Период продления #{plan.period}. Стоимость -  #{plan.price} руб" }, value_method: :id, :checked => 2, label: false, input_html: { class: 'payplan-item-wrapper' }, wrapper_html: { class: 'text-center mt-3 mb-3'} %>
+      <%  %>
+      <%= f.association :payplan, as: :radio_buttons,
+                        label_method: lambda { |plan| "Период продления #{plan.period}. Стоимость -  #{plan.price} руб" },
+                        value_method: :id,
+                        :checked => 2,
+                        label: false,
+                        disabled:  lambda {|plan| (!current_user.status_test_period && plan.price == 0) ? true : false},
+                        input_html: { class: 'payplan-item-wrapper' },
+                        wrapper_html: { class: 'text-center mt-3 mb-3'} %>
       <p>Выберите способ оплаты:</p>
       <% credit_text = '<img style="max-width: 120px;" src="/visa-master.png" alt="Visa master"></br>(Webmoney, Сбербанк Онлайн, Apple Pay, Яндекс.Деньги, Альфа-Клик)' %>
       <%= f.input :paymenttype, as: :radio_buttons, collection: [['invoice', 'Счёт для юр лиц'],['creditcard', 'Кредитные карты'], ['paypal', 'Paypal']], label_method:
