add devise admin

--- a/app/views/home/index_setup.html.erb
+++ b/app/views/home/index_setup.html.erb
@@ -115,7 +115,7 @@ data-izb-delete="{{ product.id }}" class="izb-icon deleteizb js-izb-delete fa-he
               </ul>
             </li>
             <li class="list-group-item">Настройка страницы для вывода избранных товаров
-              <ul class="mt-3 mb-3 list-group" ">
+              <ul class="mt-3 mb-3 list-group" >
                 <li class="list-group-item">Перейдите в раздел
                   <b>Контент</b>,
                   <b>Меню и страницы</b>.
