--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -113,7 +113,7 @@
           <h4 class="my-0 font-weight-normal">Бесплатно</h4>
         </div>
         <div class="card-body">
-          <h1 class="card-title pricing-card-title">7 дней<small class="text-muted"></small>
+          <h1 class="card-title pricing-card-title">30 дней<small class="text-muted"></small>
           </h1>
           <ul class="text-left mt-3 mb-4">
             <li>Поддержка</li>
@@ -160,8 +160,7 @@
       </div>
       <div class="card mb-4 box-shadow">
         <div class="card-header">
-          <h4 class="my-0 font-weight-normal">Пакет 2
-            <span style="color:red;">(экономия 10%)</span></h4>
+          <h4 class="my-0 font-weight-normal">Пакет 2</h4>
         </div>
         <div class="card-body">
           <h1 class="card-title pricing-card-title">1800 р
