--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -183,6 +183,7 @@
 
     <!-- About Section Heading -->
     <h1 class="display-4 text-center text-uppercase text-white pb-4">О нас</h1>
+    <h1 class="display-4 text-center text-uppercase text-white pb-4">О нас</h1>
 
     <!-- About Section Content -->
     <div class="row">
