--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,12 +64,14 @@
               <li class="nav-item <%= 'active' if current_page?(adminindex_insints_path) %>">
                 <a class="nav-link" href="<%= adminindex_insints_path %>">Интеграции</a>
               </li>
+              <li class="nav-item <%= 'active' if current_page?(payplans_path) %>">
+                <a class="nav-link" href="<%= payplans_path %>">Планы</a>
+              </li>
             <% end %>
-            <% if !current_admin %>
+            <% unless current_admin %>
               <li class="nav-item <%= 'active' if current_page?(clients_path) %>">
                 <a class="nav-link" href="<%= clients_path %>">Клиенты и Товары</a>
               </li>
-              <!-- Dropdown -->
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Настройки</a>
                 <div class="dropdown-menu">
