--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,11 +1,8 @@
 <div class="index-header d-flex flex-column flex-md-row align-items-center p-2 px-md-4 bg-white box-shadow">
   <h4 class="my-0 mr-md-auto font-weight-normal text-center text-lg-left">
     <a class="logo-text" href="http://k-comment.ru">
-      <strong>K-comment</strong>
+      <%= image_tag "logo_color.png", data: {src: "logo_color.png", title: 'K-comment избранные товары'}, class: 'logo' %>
     </a>
-    <p>
-      <small>сервис избранных товаров</small>
-    </p>
   </h4>
   <nav class="my-md-0 mr-md-0 mr-lg-4 mb-3">
     <a class="p-2 text-dark" href="/#service">О сервисе</a>
