--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,9 +54,7 @@
       fbq('track', 'PageView');
     </script>
     <noscript>
-      <img height="1" width="1"
-           src="https://www.facebook.com/tr?id=3804678336291509&ev=PageView
-&noscript=1"/>
+      <img height="1" width="1" src="https://www.facebook.com/tr?id=3804678336291509&ev=PageView&noscript=1"/>
     </noscript>
     <!-- End Facebook Pixel Code -->
   </head>
