--- a/app/views/dashboard/users.html.erb
+++ b/app/views/dashboard/users.html.erb
@@ -36,9 +36,9 @@
         <td><%= user.name %></td>
         <td><%= user.subdomain %></td>
         <td><%= user.email %></td>
-        <td><%= user.created_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ) %></td>
-        <td><%= user.updated_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ) %></td>
-        <td><%= user.last_sign_in_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ) %></td>
+        <td><%= user.created_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ) if user.created_at != nil %></td>
+        <td><%= user.updated_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ) if user.updated_at != nil%></td>
+        <td><%= user.last_sign_in_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ) if user.last_sign_in_at != nil%></td>
         <td><%= user.valid_until %></td>
         <td><%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>'.html_safe, dashboard_user_destroy_path(:user_id => user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
