--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,12 @@
     <meta name="google-site-verification" content="A2boZBNCfcqtaHUFrJL26DHYNaKN9efyXijRxZmNVCk"/>
     <meta name="yandex-verification" content="c284690800bdd189" />
     <title>K-comment - сервис избранных товаров insales</title>
-    <meta name="description" content="Избранные товары insales. От 500 руб/месяц. K-comment - это сервис для Вашего магазина на insales, который позволит Вашим постоянным клиентам откладывать товары для последующего изучения и покупки."/>
-    <%= favicon_link_tag asset_path('favicon.png') %>
+    <meta name="description" content="Избранные товары insales. От 300 руб/месяц. K-comment - это сервис для Вашего магазина на insales, который позволит Вашим постоянным клиентам откладывать товары для последующего изучения и покупки."/>
+    <%= favicon_link_tag asset_path("favicon.png") %>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= javascript_include_tag 'application'%>
+    <%= stylesheet_link_tag "application", media: "all" %>
+    <%= javascript_include_tag "application"%>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" integrity="sha256-BJ/G+e+y7bQdrYkS2RBTyNfBHpA9IuGaPmf9htub5MQ=" crossorigin="anonymous" />
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker3.css"/>
@@ -22,9 +23,9 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag('js', new Date());
+      gtag("js", new Date());
 
-      gtag('config', 'UA-5182062-18');
+      gtag("config", "UA-5182062-18");
     </script>
     <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
@@ -45,13 +46,13 @@
       !function(f,b,e,v,n,t,s)
       {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
         n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version="2.0";
         n.queue=[];t=b.createElement(e);t.async=!0;
         t.src=v;s=b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t,s)}(window,document,'script',
-        'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '3804678336291509');
-      fbq('track', 'PageView');
+        s.parentNode.insertBefore(t,s)}(window,document,"script",
+        "https://connect.facebook.net/en_US/fbevents.js");
+      fbq("init", "3804678336291509");
+      fbq("track", "PageView");
     </script>
     <noscript>
       <img height="1" width="1" src="https://www.facebook.com/tr?id=3804678336291509&ev=PageView&noscript=1"/>
