--- a/app/views/client_mailer/emailizb.html.erb
+++ b/app/views/client_mailer/emailizb.html.erb
@@ -9,16 +9,14 @@
     <table >
       <thead>
       <tr>
-        <th>Id товара</th>
-        <th>Название</th>
-        <th>Картинка</th>
+        <th>Название товара</th>
+        <th>Изображение</th>
         <th>Цена</th>
       </tr>
     </thead>
     <tbody>
       <% @products.each do |pr| %>
         <tr>
-          <td><%=pr.split(',')[0]%></td>
           <td><%= link_to "#{pr.split(',')[1]}", @shopurl+"/product/"+pr.split(',')[2], target: "_blank" %></td>
           <td><img src="<%=pr.split(',')[3]%>" alt="<%=pr.split(',')[1]%>"></td>
           <td><%=pr.split(',')[4]%></td>
@@ -29,5 +27,7 @@
     <p>___</p>
     <p><%= @shoptitle %></p>
     <p>Спасибо что Вы с нами, хорошего дня!</p>
+    <p></p>
+    <p><a href="https://k-comment.ru/" target="_blank" style="color:red;font-style: italic;">Сервис "K-comment - Избранные товары"</a></p>
   </body>
 </html>
