--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,7 +16,7 @@
               <a class="text-muted" href="mailto:k-comment.ru">info@k-comment.ru</a>
             </li>
           </ul>
-          <small class="d-block mb-3 text-muted">&copy; 2019-2020</small>
+          <small class="d-block mb-3 text-muted">&copy; 2019-<%= Time.now.strftime("%Y" )%></small>
         </div>
         <div class="col-3 col-md d-none d-md-block">
           <h5>Меню</h5>
