--- a/app/views/dashboard/users.html.erb
+++ b/app/views/dashboard/users.html.erb
@@ -41,9 +41,9 @@
         <td><%= user.updated_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ) if user.updated_at != nil%></td>
         <td><%= user.last_sign_in_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ) if user.last_sign_in_at != nil%></td>
         <td><%= user.valid_until %></td>
-        <td><%= dashboard_client_count_path(:user_id => user) %></td>
-        <td><%= dashboard_izb_count_path(:user_id => user) %></td>
-        <td><%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>'.html_safe, dashboard_user_destroy_path(:user_id => user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><% client_count = dashboard_client_count_path(user_id: user) ||= '' %><%= client_count %></td>
+        <td><% izb_count = dashboard_izb_count_path(user_id: user) ||= '' %><%= izb_count %></td>
+        <td><%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>'.html_safe, dashboard_user_destroy_path(user_id: user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
