--- a/app/views/dashboard/users.html.erb
+++ b/app/views/dashboard/users.html.erb
@@ -38,7 +38,7 @@
         <td><%= user.subdomain %></td>
         <td><%= user.email %></td>
         <td><%= user.created_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ) if user.created_at != nil %></td>
-        <td><%= link_to user.insints.first.subdomen, "http://"+user.insints.first.subdomen.to_s, target: "_blank" %></td>
+        <td><% if user.insints.present? %><%= link_to user.insints.first.subdomen, "http://"+user.insints.first.subdomen.to_s, target: "_blank" %><% end %></td>
         <td><%= user.last_sign_in_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ) if user.last_sign_in_at != nil%></td>
         <td><%= user.valid_until %></td>
         <td><%= Client.client_count(user.id) %></td>
