--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -135,5 +135,6 @@
 
     <%= render partial: "/layouts/footer"%>
     <%= render partial: "/layouts/zammad"%>
+    <a href="https://wa.me/79015106503" class="js-whatsapp"></a>
   </body>
 </html>
