--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,25 @@
 @import "bootstrap";
 @import "styles";
 @import "logo";
+
+
+.js-whatsapp { 
+    padding: 0;
+    z-index: 999;
+    position: fixed;
+    width: 140px;
+    border: none;
+    bottom: 0.5rem;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    left: 0.5rem;
+    text-decoration: none;
+    display: block;
+    cursor: pointer;
+    -webkit-box-shadow: 0px 0px 5px #777777;
+    box-shadow: 0px 0px 5px #777777;
+    background-color: #1ebea5;
+    background-image: url(https://static.whatsapp.net/rsrc.php/yv/r/-r3j-x8ZnM7.svg);
+    background-repeat: no-repeat;
+    height: 40px;
+}
