--- a/app/views/dashboard/users.html.erb
+++ b/app/views/dashboard/users.html.erb
@@ -40,7 +40,7 @@
         <td><%= user.created_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ) if user.created_at != nil %></td>
         <td><% if user.insints.present? %><%= link_to user.insints.first.subdomen, "http://"+user.insints.first.subdomen.to_s, target: "_blank" %><% end %></td>
         <td><%= user.last_sign_in_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ) if user.last_sign_in_at != nil%></td>
-        <td><%= user.valid_until %></td>
+        <td><%= user.valid_until.strftime("%d-%m-%Y" )%></td>
         <td><%= Client.client_count(user.id) %></td>
         <td><%= Client.izb_count(user.id) %></td>
         <td><%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>'.html_safe, dashboard_user_destroy_path(user_id: user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
