--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -134,7 +134,8 @@
     </div>
 
     <%= render partial: "/layouts/footer"%>
-    <%= render partial: "/layouts/zammad"%>
-    <a href="https://wa.me/79015106503" class="js-whatsapp"></a>
+    <%# render partial: "/layouts/zammad"%>
+    <%= render partial: "/layouts/messengers"%>
+    <%= render partial: "/layouts/rocket"%>
   </body>
 </html>
